--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "dependencies": {
     "autoprefixer": "^10.4.19",
+    "boxicons": "^2.1.4",
     "gatsby": "^5.13.3",
     "gatsby-plugin-postcss": "^6.13.1",
     "postcss": "^8.4.38",
